# VibeIndexercustom

./: .replit  Dockerfile  app.py  backlink_routes.py  backlink_routes_backup.py  config.py  docker-compose.yml  integration_test.py  models.py  pyproject.toml  replit.md  routes.py
attached_assets/: Pasted--Complete-Non-API-Google-Indexing-Workflow-The-Ultimate-100-Indexing-Strategy-2025-The-Pro-1755411204582_1755411204583.txt  Pasted--Custom-Google-Backlink-Indexer-API-Free-Implementation-Created-PROJECT-STRUCTURE-back-1755420261294_1755420261295.txt  Pasted-Building-a-Custom-Google-Backlink-Indexer-API-Free-Multi-Method-Approach-Building-a-comprehensive--1755417557595_1755417557596.txt  Pasted-Custom-Python-Indexer-End-to-End-Google-Indexing-Pipeline-Below-is-a-production-grade-blueprint--1755409650836_1755409650836.txt  Pasted-python-Advanced-browser-management-with-anti-detection-class-StealthBrowserManager-def-i-1755420177075_1755420177076.txt  ai-replit-prompt-api-free_1755417633815.md  chart_script_1755417835839.py  docker-compose_1755417633813.yml  implementation_summary_1755417633812.txt  requirements_1755417835835.txt  script (1)_1755417486610.py  script_1755417835838.py
backlink_indexer/: __init__.py  models.py
docs/: README.md
instance/: indexer.db
services/: advanced_indexing.py  background_tasks.py  gsc_client.py  sitemap_generator.py  url_discovery.py  url_validator.py
sitemaps/: .gitkeep  discovery_networks.json  html_sitemap.html  indexing_feed_20250817_095828.xml  optimization_checklist.json  priority_sitemap_20250817_095827.xml  (+3 more)
(+52 files in other folders)
