[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio-throttle>=1.0.2",
    "beautifulsoup4>=4.13.4",
    "celery>=5.5.3",
    "email-validator>=2.2.0",
    "fake-useragent>=2.2.0",
    "feedparser>=6.0.11",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-api-python-client>=2.179.0",
    "google-auth>=2.40.3",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "prometheus-client>=0.22.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "requests-html>=0.10.0",
    "scikit-learn>=1.7.1",
    "selenium>=4.35.0",
    "sqlalchemy>=2.0.43",
    "trafilatura>=2.0.0",
    "undetected-chromedriver>=3.5.5",
    "werkzeug>=3.1.3",
]
